plugins {
	id 'java'
	id 'org.springframework.boot' version '2.7.15'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.jyp'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	testImplementation 'junit:junit:4.13.1'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

	// validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	//swagger
	implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
	implementation 'org.springdoc:springdoc-openapi-security:1.7.0'

    //api-docs에서 json 형식으로 보여주기 위한 라이브러리 추가
	implementation 'org.springdoc:springdoc-openapi-webmvc-core:1.7.0'

	// email
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	// jwt
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'io.jsonwebtoken:jjwt:0.9.1'

	// JUnit Jupiter (JUnit 5) 의존성
	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'

	// Spring Boot Starter Test (JUnit 5 지원 포함)
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation('org.springframework.boot:spring-boot-starter-test') {
		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
	}

	// H2 데이터베이스 의존성 추가 (테스트용)
	testImplementation 'com.h2database:h2'

	// OAuth 2.0 Login
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	// Spring security test
	testImplementation 'org.springframework.security:spring-security-test'
}

tasks.named('bootBuildImage') {
	builder = 'paketobuildpacks/builder-jammy-base:latest'
}

tasks.named('test') {
	useJUnitPlatform()
}